# aws-ecs-service-metrics-exporter

./: .env.example  Cargo.toml  Dockerfile  Dockerfile.example  README.md
docker/: healthCheckOrDumpStack.sh
src/: main.rs  service_exporter.rs
