[package]
name = "ecs_service_metrics_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.12.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures-util = "0.3"
log = "0.4.17"
tokio = { version = "1", features = ["full"] }
